(fix): fix home overflow

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -35,6 +35,7 @@
 
 body {
     background-color: var(--background);
+    overflow-x: hidden;
 }
 
 .hero{
